--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.8.1
-Django==5.0.6
+beautifulsoup4==4.12.3
+Django==4.2.13
+django-bootstrap-v5==1.0.11
 pillow==10.3.0
+soupsieve==2.5
 sqlparse==0.5.0
 typing_extensions==4.11.0
